kubernetes/manifest/base/webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nalej.externaldns.ingress.class: nginx  
  name: open-webui-ingress
  namespace: open-webui
spec:
  ingressClassName: nginx
  rules:
    - host: open-mosaiczammad1.test.nalej.io
      http:
        paths:
          - backend:
              service:
                name: open-webui-service
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - "open-mosaiczammad1.test.nalej.io"
      secretName: wildcard-cert
